--- a/register.html
+++ b/register.html
@@ -3,29 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login Form</title>
+  <title>Registration Form</title>
   <link rel="stylesheet" href="style.css">
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
   <div class="wrapper">
     <form action="">
-      <h1>Login</h1>
+      <h1>Register</h1>
       <div class="input-box">
         <input type="text" placeholder="Username" required>
         <i class='bx bxs-user'></i>
       </div>
       <div class="input-box">
         <input type="password" placeholder="Password" required>
-        <i class='bx bxs-lock-alt' ></i>
+        <i class='bx bxs-lock-alt'></i>
       </div>
-      <div class="remember-forgot">
-        <label><input type="checkbox">Remember Me</label>
-        <a href="#">Forgot Password</a>
+      <div class="input-box">
+        <input type="password" placeholder="Confirm Password" required>
+        <i class='bx bxs-lock-alt'></i>
       </div>
-      <button type="submit" class="btn">Login</button>
+      <button type="submit" class="btn">Register</button>
       <div class="register-link">
-        <p>Dont have an account? <a href="register.html">Register</a></p>
+        <p>Already have an account? <a href="index.html">Login</a></p>
       </div>
     </form>
   </div>
