--- a/index.html
+++ b/index.html
@@ -1,30 +1,44 @@
+<!-- HTML5 doctype declaration -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta tags for character set and viewport configuration -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Title of the webpage -->
   <title>Login Form</title>
+  <!-- Link to the external stylesheet for styling -->
   <link rel="stylesheet" href="style.css">
+  <!-- Link to the Boxicons library for icon fonts -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+  <!-- Main container div with the class "wrapper" -->
   <div class="wrapper">
+    <!-- Form element with an empty action attribute (no server-side processing for simplicity) -->
     <form action="">
+      <!-- Main heading for the login form -->
       <h1>Login</h1>
+      <!-- Input box for the username with an associated icon -->
       <div class="input-box">
         <input type="text" placeholder="Username" required>
         <i class='bx bxs-user'></i>
       </div>
+      <!-- Input box for the password with an associated icon -->
       <div class="input-box">
         <input type="password" placeholder="Password" required>
         <i class='bx bxs-lock-alt' ></i>
       </div>
+      <!-- Container for the "Remember Me" checkbox and "Forgot Password" link -->
       <div class="remember-forgot">
         <label><input type="checkbox">Remember Me</label>
         <a href="#">Forgot Password</a>
       </div>
+      <!-- Button for submitting the form with the class "btn" -->
       <button type="submit" class="btn">Login</button>
+      <!-- Container for the "Don't have an account?" link -->
       <div class="register-link">
+        <!-- Paragraph with the link to the registration page -->
         <p>Dont have an account? <a href="register.html">Register</a></p>
       </div>
     </form>
