--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Container for the "Remember Me" checkbox and "Forgot Password" link -->
       <div class="remember-forgot">
         <label><input type="checkbox">Remember Me</label>
-        <a href="#">Forgot Password</a>
+        <a href="help.html">Forgot Password</a>
       </div>
       <!-- Button for submitting the form with the class "btn" -->
       <button type="submit" class="btn">Login</button>
