--- a/help.html
+++ b/help.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta tags for character set and viewport configuration -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Title of the webpage -->
   <title>Forgot Password</title>
+  <!-- Link to the external stylesheet for styling -->
   <link rel="stylesheet" href="style.css">
+  <!-- Link to the Boxicons library for icon fonts -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+  <!-- Main container div with the class "wrapper" -->
   <div class="wrapper">
+    <!-- Form element with an empty action attribute (no server-side processing for simplicity) -->
     <form action="">
+      <!-- Main heading for the forgot password form -->
       <h1>Forgot Password</h1>
+      <!-- Input box for the email with an associated icon -->
       <div class="input-box">
         <input type="email" placeholder="Email" required>
         <i class='bx bx-mail-send'></i>
       </div>
+      <!-- Button for submitting the form with the class "btn" -->
       <button type="submit" class="btn">Reset Password</button>
+      <!-- Container for the "Remember your password?" link -->
       <div class="register-link">
-        <p>Remember your password? <a href="login.html">Login</a></p>
+        <!-- Paragraph with the link to the login page -->
+        <p>Remember your password? <a href="index.html">Login</a></p>
       </div>
     </form>
   </div>
