--- a/Directories/help.html
+++ b/Directories/help.html
@@ -29,7 +29,7 @@
       <!-- Container for the "Remember your password?" link -->
       <div class="register-link">
         <!-- Paragraph with the link to the login page -->
-        <p>Remember your password? <a href="index.html">Login</a></p>
+        <p>Remember your password? <a href="/index.html">Login</a></p>
       </div>
     </form>
   </div>
