--- a/Directories/register.html
+++ b/Directories/register.html
@@ -46,7 +46,7 @@
       
       <!-- Link to Redirect Users to Login Page if They Already Have an Account -->
       <div class="register-link">
-        <p>Already have an account? <a href="index.html">Login</a></p>
+        <p>Already have an account? <a href="/index.html">Login</a></p>
       </div>
     </form>
   </div>
