--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Title of the webpage -->
   <title>Login Form</title>
   <!-- Link to the external stylesheet for styling -->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Directories/style.css">
   <!-- Link to the Boxicons library for icon fonts -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -32,14 +32,14 @@
       <!-- Container for the "Remember Me" checkbox and "Forgot Password" link -->
       <div class="remember-forgot">
         <label><input type="checkbox">Remember Me</label>
-        <a href="help.html">Forgot Password</a>
+        <a href="Directories/help.html">Forgot Password</a>
       </div>
       <!-- Button for submitting the form with the class "btn" -->
       <button type="submit" class="btn">Login</button>
       <!-- Container for the "Don't have an account?" link -->
       <div class="register-link">
         <!-- Paragraph with the link to the registration page -->
-        <p>Dont have an account? <a href="register.html">Register</a></p>
+        <p>Dont have an account? <a href="Directories/register.html">Register</a></p>
       </div>
     </form>
   </div>
